--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,26 +8,26 @@
         <h1>Sustaning api</h1>
         <h2>GET</h2>
         <ul>
-            <li><h3>path: rating/{imageID}</h3></li>
-            <li><h3>path: comment/{imageID}</h3></li>
-            <li><h3>path: images</h3></li>
-            <li><h3>path: image/{imageID}</h3></li>
-            <li><h3>path: posts/fame/{numberOfPosts}</h3></li>
-            <li><h3>path: posts/shame/{numberOfPosts}</h3></li>
-            <li><h3>path: post/{lastImageID}</h3></li>
+            <li><h3>path: api/rating/{imageID}</h3></li>
+            <li><h3>path: api/comment/{imageID}</h3></li>
+            <li><h3>path: api/images</h3></li>
+            <li><h3>path: api/image/{imageID}</h3></li>
+            <li><h3>path: api/posts/fame/{numberOfPosts}</h3></li>
+            <li><h3>path: api/posts/shame/{numberOfPosts}</h3></li>
+            <li><h3>path: api/post/{lastImageID}</h3></li>
         </ul>
         <h2>POST</h2>
         <ul>
             <li>
-                <h3>path: rating/{imageID}</h3>
+                <h3>path: api/rating/{imageID}</h3>
                 <h4>body: {<br>"rating": "",<br> "userID": "",<br> "imageID": ""<br>}</h4>
             </li>
             <li>
-                <h3>path: comment/{imageID}</h3>
-                <h4>body: {<br>"id": "",<br> "imageID": "",<br> userID: "",<br> "text": "",<br> "date": ""<br>}</h4>
+                <h3>path: api/comment/{imageID}</h3>
+                <h4>body: {<br>"id": "",<br> "imageID": "",<br> "userID": "",<br> "text": "",<br> "date": ""<br>}</h4>
             </li>
             <li>
-                <h3>path: image/{imageID}</h3>
+                <h3>path: api/image/{imageID}</h3>
                 <h4>body: {<br>"id": "",<br> "userID": "",<br> "date": "",<br> "location": "",<br> "image": "",<br> "title": "",<br> "rating": "",<br> "fameCount": "",<br> "shameCount": "",<br> "username": ""<br>}</h4>
             </li>
         </ul>
